Fix z-index of links, text tweak

--- a/src/App.css
+++ b/src/App.css
@@ -196,6 +196,7 @@ body+div+div {
 
 .resultLabels {
   padding-left: 15px;
+  z-index: 2;
 }
 
 .resultLabels a {
